--- a/style.css
+++ b/style.css
@@ -23,21 +23,21 @@ body, html{
   }
   
   .pimg1{
-    background-image:url('images/img1.jpeg');
+    background-image:url('img1.jpeg');
     min-height:100%;
   }
   
   .pimg2{
-    background-image:url('images/img2.jpeg');
+    background-image:url('img2.jpeg');
     min-height:400px;
   }
   
   .pimg3{
-    background-image:url('images/img3.jpeg');
+    background-image:url('img3.jpeg');
     min-height:400px;
   }
   .pimg4{
-    background-image:url('images/img4.jpg');
+    background-image:url('img4.jpg');
     min-height:400px;
   }
   .section{
